upp-msk-provisioner/cloudformation/msk-cf.yaml
---
AWSTemplateFormatVersion: '2010-09-09'

Parameters:

  ClusterName:
    Type: String
    Description: The name of the cluster

  VpcId:
    Type: String
    Description: The ID of the VPC that will access the cluster.

  ClientSubnetIDs:
    Type: CommaDelimitedList
    Description: The list of subnets to connect to in the client VPC separated by commas.

  TagTeamDL:
    Type: String
    Description: Email address of the team used to tag objects
    Default: "universal.publishing.platform@ft.com"

  ConfigurationArn:
    Type: String
    Description: The custom MSK configuration ARN.

  ConfigurationRevisionNum:
    Type: Number
    Description: The custom MSK configuration revision number.

Resources:

  MSKSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: MSK cluster security group
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 2181
          ToPort: 2181
          CidrIp: 10.112.0.0/13
        - IpProtocol: tcp
          FromPort: 2181
          ToPort: 2181
          CidrIp: 10.172.32.0/21     
        - IpProtocol: tcp
          FromPort: 9094
          ToPort: 9094
          CidrIp: 10.112.0.0/13
        - IpProtocol: tcp
          FromPort: 9094
          ToPort: 9094
          CidrIp: 10.172.32.0/21          
        - IpProtocol: tcp
          FromPort: 9092
          ToPort: 9092
          CidrIp: 10.112.0.0/13
        - IpProtocol: tcp
          FromPort: 9092
          ToPort: 9092
          CidrIp: 10.172.32.0/21
        - IpProtocol: tcp
          FromPort: 9092
          ToPort: 9092
          CidrIp: 10.172.32.0/21
        - IpProtocol: tcp
          FromPort: 9092
          ToPort: 9092
          CidrIp: 10.55.20.0/21          
        - IpProtocol: tcp
          FromPort: 9092
          ToPort: 9092
          SourceSecurityGroupId: sg-0156248bcf53de333
        - IpProtocol: tcp
          FromPort: 9092
          ToPort: 9092
          SourceSecurityGroupId: sg-53531d2b
      Tags:
        - Key: Name
          Value: !Ref ClusterName
        - Key: teamDL
          Value: !Ref TagTeamDL

  MSKCluster:
    Type: 'AWS::MSK::Cluster'
    Properties:
      ClusterName: !Ref ClusterName
      NumberOfBrokerNodes: 3
      KafkaVersion: 2.2.1
      EnhancedMonitoring: PER_TOPIC_PER_BROKER
      BrokerNodeGroupInfo:
        ClientSubnets: !Ref ClientSubnetIDs
        InstanceType: kafka.m5.large
        SecurityGroups:
          - !GetAtt
            - MSKSecurityGroup
            - GroupId
        StorageInfo:
          EBSStorageInfo:
            VolumeSize: 100
      EncryptionInfo:
        EncryptionInTransit:
          ClientBroker: TLS_PLAINTEXT
          InCluster: true
      ConfigurationInfo:
        Arn: !Ref ConfigurationArn
        Revision: !Ref ConfigurationRevisionNum

Outputs:
  MSKSecurityGroupID:
    Description: The ID of the security group created for the MSK clusters
    Value: !GetAtt MSKSecurityGroup.GroupId
  MSKClusterArn:
    Description: The Arn for the MSK cluster
    Value: !Ref MSKCluster
